Correct overlap of "Show IP" button
Bug: T331012

--- a/modules/ext.checkUser.styles/temporaryaccount.less
+++ b/modules/ext.checkUser.styles/temporaryaccount.less
@@ -7,7 +7,7 @@
 	min-height: 0;
 	margin-top: -8px;
 	margin-bottom: -6px;
-	margin-right: -5px;
+	margin-right: 0;
 }
 
 // Subtitle styles set a smaller line height
